update requirements.txt for test launch

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,28 @@
-# Your requirements go here
+altgraph==0.17.2
+auto-py-to-exe==2.11.0
+bottle==0.12.19
+bottle-websocket==0.2.9
+cachetools==4.2.4
+Eel==0.12.4
+future==0.18.2
+gevent==21.8.0
+gevent-websocket==0.10.1
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+greenlet==1.1.2
+gspread==4.0.1
+gspread-formatting==1.0.4
+oauthlib==3.1.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyinstaller==4.7
+pyinstaller-hooks-contrib==2021.3
+PythonTurtle==0.3.2
+requests-oauthlib==1.3.0
+rsa==4.7.2
+tk==0.1.0
+Uni-Curses==2.0.0
+whichcraft==0.6.1
+x256==0.0.3
+zope.event==4.5.0
+zope.interface==5.4.0
